--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -4,7 +4,7 @@
 // ECDS
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
-@ecdsListboxHighlistColor:		#b5d3e4;
+@ecdsListboxHighlistColor:		#ffffb2;
 @ecdsHighlightColor:			yellow;
 @inputBorderRadius:             @baseBorderRadius;
 @checkboxHoverBorderColor:      @primaryColor;
@@ -21,11 +21,13 @@
 @ecdsMenuHoverColor:			#E8E9EB;
 @ecdsMenuHoverFontColor:		#14171C;
 @ecdsListboxHeader:				#438EB9;
+@ecdsWindowCloseColor:			#FF3232;
 
 @googleBlue:					#4885ed;
 @googleGreen:					#3cba54;
 @ecdsSelectedColor:			   @googleBlue;
 @buttonColor:				   @ecdsSelectedColor;
+@loadingFontSize:				14px;
 
 // -------------------------------------
 // Typography
