--- a/src/archive/web/js/zul/menu/less/menu.less
+++ b/src/archive/web/js/zul/menu/less/menu.less
@@ -7,7 +7,6 @@
 .activeStyle() {
 	border-color: @ecdsMenuHoverColor;
 	background-color: @ecdsMenuHoverColor;
-	color: @ecdsMenuHoverFontColor; 
 }
 .restUl() {
 	background: transparent none repeat 0 0;
@@ -138,6 +137,7 @@
 	}
 }
 .z-menu {
+	margin-right:1px;
 	&-separator {
 		display: none;
 	}
@@ -229,7 +229,7 @@
 		position: absolute;
 		top: 0;
 		left: 31px;
-		z-index: 10;
+		z-index: 50;
 	}
 	.z-menu-image,
 	.z-menuitem-image {
