--- a/src/archive/web/js/zul/grid/less/grid.less
+++ b/src/archive/web/js/zul/grid/less/grid.less
@@ -73,20 +73,14 @@
 }
 //column
 .z-columns {
-	th:first-child {
-		border-left: none;
-		// B50-3306729: the first header should have border-left when the first column is covered with other header
+	th:first-child { 
 		&.z-columns-border {
-			border-left: 1px solid @meshTitleBorderColor;
+			border-right: 1px solid @meshTitleBorderColor;
 		}
-	}
-	&-bar {
-		border-left: 1px solid @meshTitleBorderColor;
-		border-bottom: 1px solid @meshTitleBorderColor;
 	}
 }
 .z-column {
-	border-left: 1px solid @meshTitleBorderColor;
+	border-right: 1px solid @meshTitleBorderColor;
 	border-bottom: 1px solid @meshTitleBorderColor;
 	padding: 0;
 	.verGradient(@ecdsListboxHeader, @ecdsListboxHeader);
