--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -22,6 +22,8 @@
 @ecdsMenuHoverFontColor:		#14171C;
 @ecdsListboxHeader:				#438EB9;
 @ecdsWindowCloseColor:			#FF3232;
+@ecdsPlaceholderColor:			#bababa;
+
 
 @googleBlue:					#4885ed;
 @googleGreen:					#3cba54;
