--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -868,3 +868,23 @@ select:disabled::-ms-value {
 body{
 	padding:0 0px;
 } 
+
+//Place holder
+::-webkit-input-placeholder {
+    color: @ecdsPlaceholderColor;
+} 
+:-moz-placeholder {
+    color: @ecdsPlaceholderColor;
+} 
+::-moz-placeholder {
+    color: @ecdsPlaceholderColor;
+} 
+:-ms-input-placeholder {
+    color: @ecdsPlaceholderColor !important; 
+} 
+::-ms-input-placeholder {
+    color: @ecdsPlaceholderColor;
+} 
+::placeholder {
+    color: @ecdsPlaceholderColor;
+}
