--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -4,7 +4,7 @@
 // ECDS
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
-@ecdsListboxHighlistColor:		#ffffb2;
+@ecdsListboxHighlistColor:		#f5f0c9;
 @ecdsHighlightColor:			yellow;
 @inputBorderRadius:             @baseBorderRadius;
 @checkboxHoverBorderColor:      @primaryColor;
