--- a/src/archive/web/js/zul/tab/less/tabbox.less
+++ b/src/archive/web/js/zul/tab/less/tabbox.less
@@ -339,13 +339,13 @@
 	font-family: @baseTitleFontFamily;
 	font-size: @fontSizeMedium;
 	display: block;
-	border: 1px solid @baseBorderColor;
+	border: 1px solid @baseBorderColorLight;
 	border-width: 1px 1px 0px 1px;
 	.topBorderRadius(@baseBorderRadius);
 	margin: 0;
 	padding-top: 1px;
 	line-height: @baseButtonHeight + 6;
-	background-color:@meshStripeBackgroundColor;
+	background-color:@ecdsWhiteColor;
 	text-align: center;
 	position: relative;
 	cursor: pointer;
@@ -460,7 +460,7 @@
 }
 
 .z-tabpanel {
-	border: 1px solid @baseBorderColor;
+	border: 1px solid @baseBorderColorLight;
 	border-top: 0px;
 	padding: 0px;
 	zoom: 1;
