--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -4,7 +4,7 @@
 // ECDS
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
-@ecdsListboxHighlistColor:		#f5f0c9;
+@ecdsListboxHighlistColor:		#ffffb2;
 @ecdsHighlightColor:			yellow;
 @inputBorderRadius:             @baseBorderRadius;
 @checkboxHoverBorderColor:      @primaryColor;
@@ -82,6 +82,7 @@
 
 // Border color
 @baseBorderColor:              #CFCFCF;
+@baseBorderColorLight: 		   #e2e2e2;
 
 // Background color
 @baseBackgroundColor:          #FFFFFF;
