--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -892,22 +892,26 @@ body{
 	-webkit-box-shadow: 1px 1px 1px 1px #ccc;  
 	-moz-box-shadow:    1px 1px 1px 1px #ccc;  
 	box-shadow:         1px 1px 1px 1px #ccc; 
+	margin:2px;
 }
 
 .light-shadow{
 	-webkit-box-shadow: 0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
 	-moz-box-shadow:    0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
 	box-shadow:         0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
+	margin-bottom:2px;
 }
 
 .setDarkShadow() {
 	-webkit-box-shadow: 1px 1px 1px 1px #ccc;  
 	-moz-box-shadow:    1px 1px 1px 1px #ccc;  
-	box-shadow:         1px 1px 1px 1px #ccc; 
+	box-shadow:         1px 1px 1px 1px #ccc;  
+	margin:2px;
 }
 
 .setLightShadow() {
 	-webkit-box-shadow: 0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
 	-moz-box-shadow:    0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
 	box-shadow:         0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
+	margin-bottom:2px;
 }
