--- a/src/archive/web/js/zul/wnd/less/panel.less
+++ b/src/archive/web/js/zul/wnd/less/panel.less
@@ -28,9 +28,8 @@
 	}
 	
 	&-header {
-		.fontStyle(@baseTitleFontFamily, @fontSizeMedium, normal, @textColorGrayDark);
-		border: 0;
-		padding: 3px 0 5px 0;
+		.fontStyle(@baseTitleFontFamily, @baseFontSize, bold, @secondaryColor);
+		border: 0; 
 		line-height: 24px;
 		background: @panelBackgroundColor;
 		.defaultOverflowZoom();
