--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -17,12 +17,13 @@
 @ecdsButtonHover:				#5a91ee;
 @ecdsButtonActive:				#4371b9;
 @ecdsMenuColor:					#5f6368;
-@ecdsMenuBackgroundColor:		#F7F8FA;
-@ecdsMenuHoverColor:			#E8E9EB;
-@ecdsMenuHoverFontColor:		#14171C;
+@ecdsMenuBackgroundColor:		#e4e4e4;
+@ecdsMenuHoverColor:			#f5f5f5;
+@ecdsMenuHoverFontColor:		#0085b8;
 @ecdsListboxHeader:				#438EB9;
 @ecdsWindowCloseColor:			#FF3232;
 @ecdsPlaceholderColor:			#bababa;
+@ecdsToolbarBackgroundHover:	#999;
 
 
 @googleBlue:					#4885ed;
@@ -37,6 +38,9 @@
 @baseFontSize:                 14px;
 @baseTitleFontFamily:          "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 @baseContentFontFamily:        "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+//"Helvetica Neue",Helvetica,Arial,"Microsoft Yahei",微软雅黑,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+//"Helvetica Neue",Helvetica,Arial,"Microsoft JhengHei",微軟正黑體,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+
 @baseLineHeight:               14px;
 
 // Component height
@@ -292,7 +296,7 @@
 
 // panel
 @panelBorderColor:             #CFCFCF;
-@panelBackgroundColor:         #E1EDF4;
+@panelBackgroundColor:         @ecdsWhiteColor;
 @panelBodyBackground:          #F0F6F9;
 
 // menu
