--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -297,6 +297,7 @@ input[type="checkbox"] {
 //label
 .z-label {
 	line-height: normal;
+	color: @secondaryColor;
 }
 .z-label,
 .z-radio-content,
@@ -915,3 +916,53 @@ body{
 	box-shadow:         0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(59,64,69,0.1);
 	margin-bottom:2px;
 }
+
+.center-website {
+	max-width: 1280px !important;
+    margin: auto !important;
+    position: relative !important;
+}
+
+.label-separator {
+	border-top: 1px solid #E1E5E9;
+}
+
+.grid-remove-border tr.z-row td.z-row-inner,
+	tr.z-row,
+	div.z-grid-body div.z-cell,
+	div.z-grid {
+  border: none; 
+}
+
+//Button Group with Icon    
+.btn-group button , .btn-group i{  
+  color: white; 
+  padding: 4px 8px;
+  float: left; /* Float the buttons side by side */
+  margin:0px;
+  border-radius:0px;
+  border:1px solid #396abd;
+  height:24px;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+ 
+.btn-group :last-child{
+  border-top-right-radius:4px;
+  border-bottom-right-radius:4px;
+}
+
+.btn-group :first-child{
+  border-top-left-radius:4px;
+  border-bottom-left-radius:4px; 
+  border-right:none;
+}
+
+.btn-group i:first-child{
+	  background:#396abd;
+	  border:1px solid #396abd;
+	  border-right:none; 
+}
+ 
