--- a/src/archive/web/js/zul/mesh/less/paging.less
+++ b/src/archive/web/js/zul/mesh/less/paging.less
@@ -4,7 +4,7 @@
 	height: @baseBarHeight;
 	border-bottom: 1px solid @pagingBorderColor;
 	padding: 4px 10px 3px;
-	background: @pagingBackgroundColor;
+	.verGradient(@baseGradientStart, @baseGradientEnd);
 	position: relative;
 	
 	&-os {
