--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -307,7 +307,7 @@
 @menuSeparatorBorderColor:     #838383;
 @menuSeparatorBackgroundColor: #B8B8B8;
 @menuPopupSeparatorBorder:     #FFFFFF;
-@menuPopupSeparatorBackground: #E0E0E0;
+@menuPopupSeparatorBackground: #cdcdcd;
 
 // navbar
 @navImageSize:                 16px;
