--- a/src/archive/web/js/zul/menu/less/menu.less
+++ b/src/archive/web/js/zul/menu/less/menu.less
@@ -349,7 +349,7 @@
 		border: 1px solid @baseBorderColor;
 		border-width: 0 1px;
 		line-height: normal;
-		.verGradient(@baseGradientStart, @baseGradientEnd);
+		background: @baseGradientStart;
 		position: absolute;
 		top: 0;
 		right: 0;
