--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -5,6 +5,7 @@
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
 @ecdsListboxHighlistColor:		#ffffb2;
+@ecdsListboxLightBorderColor:	#F0F2F4;
 @ecdsHighlightColor:			yellow;
 @inputBorderRadius:             @baseBorderRadius;
 @checkboxHoverBorderColor:      @primaryColor;
@@ -24,6 +25,7 @@
 @ecdsWindowCloseColor:			#FF3232;
 @ecdsPlaceholderColor:			#bababa;
 @ecdsToolbarBackgroundHover:	#999;
+@ecdsListboxHeaderBorder:		#437ab9;
 
 
 @googleBlue:					#4885ed;
