--- a/src/archive/web/js/zul/grid/less/grid.less
+++ b/src/archive/web/js/zul/grid/less/grid.less
@@ -21,7 +21,7 @@
 	//grid header
 	&-header {
 		width: 100%;
-		.verGradient(@ecdsListboxHeader, @ecdsListboxHeader);
+		background: ecdsListboxHeader;
 		position: relative;
 		overflow: hidden;
 		.resetTable();
@@ -60,11 +60,7 @@
 	}
 	.z-row-inner, .z-cell {
 		background: @meshBackgroundColor;
-	}
-	&-odd > .z-row-inner,
-	&-odd > .z-cell {
-		background: @meshStripeBackgroundColor;
-	}
+	} 
 	// ZK-3138: ROD loading indicator
 	&-loading {
 		background: transparent no-repeat center;
@@ -80,17 +76,17 @@
 	}
 }
 .z-column {
-	border-right: 1px solid @meshTitleBorderColor;
-	border-bottom: 1px solid @meshTitleBorderColor;
+	border-right: 1px solid @ecdsListboxHeaderBorder;
+	border-bottom: 1px solid @ecdsListboxHeaderBorder;
 	padding: 0;
-	.verGradient(@ecdsListboxHeader, @ecdsListboxHeader);
+	background: @ecdsListboxHeader;
 	background-clip: padding-box;
 	position: relative;
 	overflow: hidden;
 	white-space: nowrap;
 
 	&-hover {
-		.verGradient(@meshTitleHoverStart, @meshTitleHoverEnd);
+		background: @meshTitleHoverStart;
 		.z-column-button {
 			display: block;
 		}
@@ -141,8 +137,8 @@
 	}
 	.z-row-inner,
 	.z-cell {
-		border-right: 1px solid #cfcfcf;
-		border-bottom: 1px solid #cfcfcf;
+		//border-right: 1px solid @baseBorderColor;
+		border-bottom: 1px solid @ecdsListboxLightBorderColor;
 		overflow: hidden;
 		position: relative;
 		z-index: 0;
@@ -150,7 +146,7 @@
 	&:hover {
 		> .z-row-inner,
 		> .z-cell {
-			.verGradient(@meshContentHoverStart, @meshContentHoverEnd);
+			background: @meshContentHoverStart;
 			background-clip: padding-box;
 		}
 		> .z-row-inner > .z-row-content { //for nest issue
@@ -186,7 +182,7 @@ body:not(.gecko) {
 	&-inner {
 		border-top: 1px solid @meshTitleBorderColor;
 		border-bottom: 1px solid @meshTitleBorderColor;
-		.verGradient(@groupGradientStart, @groupGradientEnd);
+		background: @groupGradientStart;
 		position: relative;
 		overflow: hidden;
 		
@@ -209,7 +205,7 @@ body:not(.gecko) {
 	}
 }
 .z-groupfoot-inner {
-	.verGradient(@groupGradientEnd, @groupGradientStart);
+	background: @groupGradientEnd;
 	overflow: hidden;
 }
 //content
