--- a/src/archive/web/js/zul/tab/less/tabbox.less
+++ b/src/archive/web/js/zul/tab/less/tabbox.less
@@ -124,7 +124,7 @@
 		padding-top: 5px;
 		padding-bottom: 2px;
 		line-height: @baseButtonHeight;
-		.verGradient(@baseGradientStart, @baseGradientEnd);
+		background: @baseGradientStart;
 		text-align: center;
 		position: absolute;
 		top: 0;
@@ -276,7 +276,7 @@
 			zoom: 1;
 
 			&-selected {
-				.verGradient(@baseGradientStart, @baseGradientEnd);
+				background: @baseGradientStart;
 				.boxShadow('none');
 				cursor: default;
 			}
@@ -439,7 +439,7 @@
 		cursor: default;
 		
 		&:hover {
-			.verGradient(@baseGradientStart, @baseGradientEnd);
+			background: @baseGradientStart;
 		}
 		.z-tab-button:hover {
 			.opacity(@disabledOpacity);
