--- a/src/archive/web/js/zul/wgt/less/button.less
+++ b/src/archive/web/js/zul/wgt/less/button.less
@@ -28,7 +28,7 @@
 	&[disabled] {
 		border-color: @buttonBorderColor;
 		background-color: @primaryColor;
-		.opacity(@disabledOpacityLow);
+		.opacity(@disabledOpacity);
 		.boxShadow('none');
 		cursor: default;
 	}
