--- a/src/archive/web/js/zul/grid/less/grid.less
+++ b/src/archive/web/js/zul/grid/less/grid.less
@@ -137,7 +137,7 @@
 	}
 	.z-row-inner,
 	.z-cell {
-		//border-right: 1px solid @baseBorderColor;
+		border-right: 1px solid @ecdsListboxLightBorderColor;
 		border-bottom: 1px solid @ecdsListboxLightBorderColor;
 		overflow: hidden;
 		position: relative;
