--- a/src/archive/web/js/zul/sel/less/listbox.less
+++ b/src/archive/web/js/zul/sel/less/listbox.less
@@ -159,7 +159,7 @@
 	}
 	//list cell
 	.z-listcell {
-		//border-right: 1px solid @baseBorderColor;
+		border-right: 1px solid @ecdsListboxLightBorderColor;
 		border-bottom: 1px solid @ecdsListboxLightBorderColor;
 		overflow: hidden;
 		cursor: pointer;
