--- a/src/archive/web/js/zul/tab/less/tabbox.less
+++ b/src/archive/web/js/zul/tab/less/tabbox.less
@@ -373,7 +373,7 @@
 			color: @googleBlue; 
 		}
 		font-style: normal;
-		color: @ecdsMenuColor;
+		color: @ecdsTabFontColor;
 		display: block;
 		padding: 4px 12px 2px;
 		line-height: @baseButtonHeight;
