--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -17,15 +17,17 @@
 @ecdsWhiteColor:				white;
 @ecdsButtonHover:				#5a91ee;
 @ecdsButtonActive:				#4371b9;
-@ecdsMenuColor:					#5f6368;
-@ecdsMenuBackgroundColor:		#e4e4e4;
+@ecdsMenuColor:					@ecdsMenuHoverColor;
+@ecdsMenuBackgroundColor:		#5f6368;
 @ecdsMenuHoverColor:			#f5f5f5;
-@ecdsMenuHoverFontColor:		#0085b8;
+@ecdsMenuHoverFontColor:		@ecdsMenuBackgroundColor;
+@ecdsMenuActiveFontColor:		#0085b8;
 @ecdsListboxHeader:				#438EB9;
 @ecdsWindowCloseColor:			#FF3232;
 @ecdsPlaceholderColor:			#bababa;
 @ecdsToolbarBackgroundHover:	#999;
 @ecdsListboxHeaderBorder:		#437ab9;
+@ecdsTabFontColor:				#686f7a;
 
 
 @googleBlue:					#4885ed;
@@ -307,7 +309,7 @@
 @menuActiveBorderColorBL:      #B6B6B6;
 @menuPopupBackground:          #FAFAFA;
 @menuSeparatorBorderColor:     #838383;
-@menuSeparatorBackgroundColor: #B8B8B8;
+@menuSeparatorBackgroundColor: #6f7277;
 @menuPopupSeparatorBorder:     #FFFFFF;
 @menuPopupSeparatorBackground: #cdcdcd;
 
