--- a/src/archive/web/zul/less/norm.less
+++ b/src/archive/web/zul/less/norm.less
@@ -358,6 +358,7 @@ input[type="checkbox"] {
 }
 .z-loading-indicator,
 .z-apply-loading-indicator {
+	color: @ecdsWhiteColor;
 	.borderRadius(4px);
 	background: black;
 	opacity:0.8;
