--- a/src/archive/web/js/zul/wgt/less/toolbar.less
+++ b/src/archive/web/js/zul/wgt/less/toolbar.less
@@ -2,7 +2,7 @@
 
 .z-toolbar {
 	display: block;
-	border-color: @baseBorderColor;
+	border-color: @baseBorderColorLight;
 	border-style: solid;
 	border-width: 0 0 1px;
 	padding: 4px 4px 3px;
