--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -4,9 +4,11 @@
 // ECDS
 // ------------------------------------
 @ecdsLightBorderColor:			#f2f2f2;
-@ecdsListboxHighlistColor:		#ffffb2;
-@ecdsListboxLightBorderColor:	#F0F2F4;
+@ecdsListboxHighlistColor:		#a6cbdf;
+@ecdsListboxBorderHighlistColor:#98c3da;
+@ecdsListboxLightBorderColor:	#dfe0e2;
 @ecdsHighlightColor:			yellow;
+@ecdsHighlightColorDark1:		#e5e500;
 @inputBorderRadius:             @baseBorderRadius;
 @checkboxHoverBorderColor:      @primaryColor;
 @inputDisableColor:  			white;
@@ -17,20 +19,23 @@
 @ecdsWhiteColor:				white;
 @ecdsButtonHover:				#5a91ee;
 @ecdsButtonActive:				#4371b9;
-@ecdsMenuColor:					@ecdsMenuHoverColor;
-@ecdsMenuBackgroundColor:		#5f6368;
-@ecdsMenuHoverColor:			#f5f5f5;
-@ecdsMenuHoverFontColor:		@ecdsMenuBackgroundColor;
-@ecdsMenuActiveFontColor:		#0085b8;
-@ecdsListboxHeader:				#438EB9;
+@ecdsMenuColor:					#555;
+@ecdsMenuBackgroundColor:		#F5F5F5;
+@ecdsMenuHoverColor:			@ecdsWhiteColor;
+@ecdsMenuHoverFontColor:		@ecdsMenuColor;
+@ecdsMenuHoverItemColor:		@primaryColor;
+@ecdsMenuActiveFontColor:		@primaryColor;
+
 @ecdsWindowCloseColor:			#FF3232;
 @ecdsPlaceholderColor:			#bababa;
 @ecdsToolbarBackgroundHover:	#999;
-@ecdsListboxHeaderBorder:		#437ab9;
+@ecdsListboxHeader:				@primaryColor;
+@ecdsListboxHeaderBorder:		#3e83ab;
 @ecdsTabFontColor:				#686f7a;
-
-
+ 
 @googleBlue:					#4885ed;
+@googleBlueDark1:				#4077d5;
+@googleBlueDark2:				#396abd;
 @googleGreen:					#3cba54;
 @ecdsSelectedColor:			   @googleBlue;
 @buttonColor:				   @ecdsSelectedColor;
@@ -197,7 +202,7 @@
 // Checked (used on menuitem, listbox, tree, toolbarbutton)
 @checkedColor:                 @ecdsSelectedColor;
 @checkedBorderColor:           #8E8F8F;
-@checkedBackgroundColor:       #F8F8F8;
+@checkedBackgroundColor:       @ecdsWhiteColor;
 @checkedGradientStart:         @primaryColor;
 @checkedGradientEnd:           @primaryColor;
 
@@ -209,7 +214,7 @@
 // Component independent variables
 // -------------------------------------
 // mask and loading
-@maskBackgroundColor:          #E0E1E3;
+@maskBackgroundColor:          #1f4154;
 @loadingBackgroundColor:       #E3E3E3;
 
 // scrollbar
@@ -292,7 +297,9 @@
 
 // window
 @windowBorderColor:            #CFCFCF;
-@windowBackgroundColor:        #6da8ca;
+@windowBackgroundColor:        #f2f2f2;
+@windowBackgroundColorDark1:   #ececec;
+@windowFontColor:			   #757575;
 @windowFramePadding:           0px;
 
 // tabbox
@@ -309,7 +316,7 @@
 @menuActiveBorderColorBL:      #B6B6B6;
 @menuPopupBackground:          #FAFAFA;
 @menuSeparatorBorderColor:     #838383;
-@menuSeparatorBackgroundColor: #6f7277;
+@menuSeparatorBackgroundColor: #E5E5E5;
 @menuPopupSeparatorBorder:     #FFFFFF;
 @menuPopupSeparatorBackground: #cdcdcd;
 
