--- a/src/archive/web/js/zul/inp/less/combo.less
+++ b/src/archive/web/js/zul/inp/less/combo.less
@@ -106,6 +106,10 @@
     .boxShadow('none');
 }
 
+.z-bandbox-icon:before { 
+	content: "\f08e"; 
+}
+
 .z-combobox-input,
 .z-bandbox-input,
 .z-datebox-input {
