--- a/src/archive/web/js/zul/tab/less/tabbox.less
+++ b/src/archive/web/js/zul/tab/less/tabbox.less
@@ -345,7 +345,7 @@
 	margin: 0;
 	padding-top: 1px;
 	line-height: @baseButtonHeight + 6;
-	background-color:@ecdsWhiteColor;
+	background-color:@ecdsListboxBackground;
 	text-align: center;
 	position: relative;
 	cursor: pointer;
