--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -6,7 +6,7 @@
 @ecdsLightBorderColor:			#f2f2f2;
 @ecdsListboxHighlistColor:		#a6cbdf;
 @ecdsListboxBorderHighlistColor:#98c3da;
-@ecdsListboxLightBorderColor:	#dfe0e2;
+@ecdsListboxLightBorderColor:	#F0F2F4;
 @ecdsHighlightColor:			yellow;
 @ecdsHighlightColorDark1:		#e5e500;
 @inputBorderRadius:             @baseBorderRadius;
@@ -32,6 +32,7 @@
 @ecdsListboxHeader:				@primaryColor;
 @ecdsListboxHeaderBorder:		#3e83ab;
 @ecdsTabFontColor:				#686f7a;
+@ecdsListboxBackground:			#fbfbfb;
  
 @googleBlue:					#4885ed;
 @googleBlueDark1:				#4077d5;
