--- a/src/archive/web/js/zul/sel/less/listbox.less
+++ b/src/archive/web/js/zul/sel/less/listbox.less
@@ -20,6 +20,7 @@
 	border-bottom: 1px solid @baseBorderColor;
 	overflow: hidden;
 	zoom: 1;
+	background: @ecdsListboxBackground;
 	//listbox header
 	&-header {
 		width: 100%;
