--- a/src/archive/web/js/zul/inp/less/combo.less
+++ b/src/archive/web/js/zul/inp/less/combo.less
@@ -108,7 +108,7 @@
 
 .z-bandbox-icon:before { 
 	content: "\f08e"; 
-}
+} 
 
 .z-combobox-input,
 .z-bandbox-input,
@@ -136,7 +136,8 @@
 
 .z-datebox-button,
 .z-bandbox-button {
-	text-align: center;
+	text-align: center; 
+	color: @secondaryColor;
 }
 
 .z-timebox-button,
