--- a/src/archive/web/zul/less/_zkvariables.less
+++ b/src/archive/web/zul/less/_zkvariables.less
@@ -17,8 +17,8 @@
 @secondaryColor:				#636363;
 @ecdsBlackColor:				#2d2b2b;
 @ecdsWhiteColor:				white;
-@ecdsButtonHover:				#5a91ee;
-@ecdsButtonActive:				#4371b9;
+@ecdsButtonHover:				#4077d5;
+@ecdsButtonActive:				#396abd;
 @ecdsMenuColor:					#555;
 @ecdsMenuBackgroundColor:		#F5F5F5;
 @ecdsMenuHoverColor:			@ecdsWhiteColor;
@@ -41,6 +41,8 @@
 @ecdsSelectedColor:			   @googleBlue;
 @buttonColor:				   @ecdsSelectedColor;
 @loadingFontSize:				14px;
+
+
 
 // -------------------------------------
 // Typography
